--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,12 @@
 {
-  "singleQuote": false,
-  "semi": true,
-  "tabWidth": 2,
-  "trailingComma": "all",
-  "printWidth": 100
+  "prettier/prettier": [
+    "error",
+    {
+      "singleQuote": false,
+      "semi": true,
+      "tabWidth": 2,
+      "trailingComma": "all",
+      "printWidth": 100
+    }
+  ]
 }
