Edit and Remove Supabase

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
       "singleQuote": false,
       "semi": true,
       "tabWidth": 2,
-      "trailingComma": "all",
+      "trailingComma": "es5",
       "printWidth": 100
     }
   ]
