--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,7 @@
 {
-  "prettier/prettier": [
-    "error",
-    {
-      "singleQuote": false,
-      "semi": true,
-      "tabWidth": 2,
-      "trailingComma": "all",
-      "printWidth": 100
-    }
-  ]
+  "singleQuote": false,
+  "semi": true,
+  "tabWidth": 2,
+  "trailingComma": "none",
+  "printWidth": 100
 }
