Refactor GetEpics component to use custom hook for fetching epics and improve error handling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["vite/client"],
-    "paths": {
-      "@/*": ["./*"]
-    }
+    "types": ["vite/client"]
   },
   "include": ["src", "vite-env.d.ts"]
 }
